17.09.2024
-Added basic program printing when no valid files are passed to the engine.

9.09.2024
-Updated types of parameters in the documentation.
-Removed useless variables from the scripts.
-Added literals to arithmetic instructions.
-Standardized error handling in the instructions.
-Updated the event assembler (jit compiler) with the new type of parameters.
-Replaced dynamicIDs and literals in operations with Parameter structure in order to allow mixing variables and literals together in the instructions.
-Restricted variables' names by not allowing strings that start with numbers and \". Remove the distinction between using context and literals in all instructions. Removeed all "zero", "True" and "False" variables from the scripts.
-Removed "bool", "int", "double" and "string" contexts from parameters.

26.08.2024
-Minimized "bind" instruction and create "rbind" instruction, which removes all binded scripts from the chosen objects.  

21.08.2024
-Changed 'rename' instruction to 'mv' and update it with context variables.

27.07.2024
-Created Makefile.

24.07.2024
-Added tests.
-Fixed Scrollbar module: Image pointers were not invalidated after using the "new" instruction.
-Minimized aggregation instructions.

17.07.2024
-Minimized "if" and "value" instructions by shortening the expressions.
-Minimized "print" instruction by removing "type" parameter from the variadic part.
-Updated documentation with a new "context" parameter type.
-Added "breakpoint" instruction for triggering a breakpoint inside a debugger.
-Minimized "index" instruction by removing "source" and "indexes_from_contexts" parameters.

12.07.2024
-Removed variable types from the "fun" instruction.
-Fixed minuses.

1.07.2024
-Minimized the scripting language with the type guessing (random_int, var, cd).
-Described "rename" instruction.

30.06.2024
-Created "save_to_file" and "load_from_file" functions for the EditableText to enable saving and loading formatted text.