@@ -1,0 +1,15 @@
+//Basic loop program that counts to 10.
+
+start main
+    triggers on_boot
+    int [0] iterator
+    run loop
+after //"After" sub-scope will be executed after all events passed to the "run" instruction are finished.
+    power_off
+end
+
+start loop true
+    if ([iterator] [10] <)
+    ++ iterator
+    print "" _ iterator "\n"
+end
