@@ -1,6 +1,0 @@
-start xd2
-    triggers each_iteration
-    print "Hello world"
-    print "Hello world"
-    delete_this_event
-end
