@@ -2,6 +2,6 @@ start lol
     triggers each_iteration
     string ["Lorem ipsum lool\n"] result
     run printOnTerminal printOnTerminal 
-    post
+after
     delete_this_event
 end
